package com.codecool.entities;

public class Coach {
}
