package com.codecool.entities;

import com.codecool.utils.PlayerPosition;

public class Player {
    private String name;
    private PlayerPosition playerPosition;
}
