package com.codecool.utils;

public enum AccreditationLevel {
}
