package com.codecool.utils;

public enum PlayerPosition {
}
